adjusting styles without bootstrap

--- a/src/form.css
+++ b/src/form.css
@@ -44,6 +44,8 @@ h1 strong {
 
 h2 {
   text-align:center;
+  font-weight:500;
+  font-size:2.2em;
 }
 
 .content {
@@ -55,16 +57,18 @@ h2 {
   width:500px;
   padding-top:35px;
   margin: 0 auto;
+  position:relative;
 }
 
 .form {
   float:left;
   width:500px;
   margin-top:20px;
+  position:relative;
 }
 
 .field {
-  width: 448px;
+  width: 500px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
@@ -73,9 +77,10 @@ h2 {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   color: #000;
-  float: left;
   padding: 15px;
   margin-bottom: 15px;
+  display:block;
+  box-sizing:border-box;
 }
 
 .submit {
@@ -83,13 +88,28 @@ h2 {
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
-  margin-left: -78px;
-  margin-top: 12px;
   background: #e6e6e6;
   border: none;
-  float: left;
   font-family: 'Lato', sans-serif;
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
+  top: 12px;
+  right: 15px;
+  position:absolute;
+}
+
+.app-feedback{
+  display:block;
+  text-align:center;
+  font-family: monospace;
+  font-size: 16px;
+}
+
+.error{
+  color:#ef5959;
+}
+
+.success{
+  color:#0cb538;
 }
